# vocabulator

./: .gitignore  README.md  docker-compose.yaml  makefile
api/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/src/: config.py  database.py  main.py
api/src/models/: database.py  project.py  property.py  property_connections.py  vendor.py
api/src/routes/: project.py  vendor.py
dashboard/: Dockerfile  README.md  angular.json  docker-compose.yaml  package-lock.json  package.json
dashboard/src/: index.html
dashboard/src/app/: api.service.ts  app.component.spec.ts  app.component.ts  app.module.ts
dashboard/src/app/db-view/: db-view.component.html  db-view.component.spec.ts  db-view.component.ts
dashboard/src/app/footer/: footer.component.html  footer.component.scss
dashboard/src/app/header/: header.component.html  header.component.scss
dashboard/src/app/models/: vendor.ts
dashboard/src/app/new-db-connection/: new-db-connection.component.html  new-db-connection.component.spec.ts  new-db-connection.component.ts
dashboard/src/app/new-project/: new-project.component.html  new-project.component.ts
dashboard/src/app/new-vendor/: new-vendor.component.html  new-vendor.component.scss  new-vendor.component.ts
dashboard/src/app/project-selection-view/: project-selection-view.component.html  project-selection-view.component.scss  project-selection-view.component.ts
dashboard/src/app/project-view/: project-view.component.html  project-view.component.ts
dashboard/src/app/services/: api.service.ts  (+2 more)
postgres/: docker-compose.yaml
(+16 files in other folders)
